@@ -5,7 +5,9 @@ Changelog
 2.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implemented adapter to publish ShopItem Variations
+  (those are stored in annotations and therefore haven't been published before).
+  [lgraf]
 
 
 2.1.1 (2013-06-21)
